Version (CVS)
-------------

XML:    Changed the default behavior of the Xerces Serializer to preserve space
        by default.
        (Sebastien Gignoux <gignoux@intalio.com>)

JDO:    Bug fix when castor closed Connection during db.close() (before the end of
        transaction) and the got new Connection during beforeCompletion(),
        which remains open after the end of transaction.
        (Solution submitted by Terry Child <tmchild@gmx.net>)

JDO:    Castor JDO should now behave shamelessly in a multi classloader context.
        This is especially relevant when used in a BMP/CMP environment where the 
        EJB container might assign a ClassLoader instance per set of Beans, or 
        might attach a different classloader for each new transaction.
        (Sebastien Sahuc <ssahuc@intalio.com>)

XML & JDO:  
        Check that an XML mapping file do not declare more identity attributes
        for a given class than there are field elementsdefined for that
        class.
        (Patch submitted by Gabriel Richard Pack <gpack@electroneconomy.com>)

XML:	Added support for restriction in simpleContent and enhanced complexType support
	(Arnaud <blandin@intalio.com>)	

XML: 	Added the command-line option '-nomarshall' which aims at preventing the
	generation of the marshalling framework specific methods (marshall, unmarshall, validate)
	(Arnaud <blandin@intalio.com>)

XML:   Added setNSPrefixAtRoot method. When used in conjunction with setNamespaceMapping this
	will insert the namepsace declarations at the root node.
	(Andrew Fawcett, andrew.fawcett@coda.com)

XML:    Fixed collection handling for introspected class. 
        (Sebastien Gignoux <gignoux@intalio.com>)

XML:    Bug fix for using addXxx methods.
        (Fix submitted by Michael Thyen <mthyen@excite.com>)

XML:    Bug fix in the handling of 'Map' collection. Now we use the abstract
        'Map' interface rather than 'HashMap'.
        (Fix submitted by Ron Smith <rsmith7209@yahoo.com>)
