@@ -1,6 +1,10 @@
 Version (CVS)
 -------------
 
+XML:   Added setPolymorph method to Marshaller.java. This can be used to force all field values
+          to be marshalled as their field types rather than their instance types.
+          (Andrew Fawcett andrew.fawcett@coda.com)
+
 XML:    Changed the default behavior of the Xerces Serializer to preserve space
         by default.
         (Sebastien Gignoux <gignoux@intalio.com>)
